--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ source:
 build:
   number: 1000
   skip: true  # [not linux]
-  skip: true  # [py>=37]
+  skip: true  # [py>36]
 
 requirements:
   build:
